--- a/public/css/partials/_header.scss
+++ b/public/css/partials/_header.scss
@@ -35,7 +35,7 @@
           bottom: 0;
           width: 95%;
           height: 30px;
-          transform: translateX(-8px);
+          // transform: translateX(-8px);
       }
   }
   :focus{
@@ -117,6 +117,7 @@
           font-weight:normal;
         }
         @media(max-width: 800px){
+          height: 95%;
           top:-25px;
           *{
             font-size: 11px;
