--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,7 +70,7 @@
 
 .display-none {
   display: none;
-  z-index: -1;
+  z-index: -5;
 }
 
 .position-relative {
@@ -193,8 +193,6 @@
     bottom: 0;
     width: 95%;
     height: 30px;
-    -webkit-transform: translateX(-8px);
-            transform: translateX(-8px);
   }
 }
 
@@ -312,6 +310,7 @@
 
 @media (max-width: 800px) {
   .header .utils-container .user-loggedin-tools {
+    height: 95%;
     top: -25px;
   }
   .header .utils-container .user-loggedin-tools * {
@@ -477,7 +476,7 @@
           transform: translateY(3px);
 }
 
-.modal {
+.modal-bg {
   width: 100vw;
   height: 100vh;
   background-color: rgba(29, 26, 26, 0.829);
@@ -499,7 +498,7 @@
   transition: opacity 0.1s ease-in-out;
 }
 
-.modal form {
+.modal-bg form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -526,7 +525,7 @@
 }
 
 @media (max-width: 800px) {
-  .modal form {
+  .modal-bg form {
     width: 85vw;
     height: 80vh;
     position: fixed;
@@ -535,7 +534,7 @@
   }
 }
 
-.modal form .fa-times {
+.modal-bg form .fa-times {
   font-size: 35px;
   color: #a39d9d;
   position: absolute;
@@ -544,18 +543,18 @@
   opacity: 80%;
 }
 
-.modal form :hover {
+.modal-bg form :hover {
   opacity: 1;
 }
 
-.modal form .modal-title {
+.modal-bg form .modal-title {
   padding: 8px;
   font-size: 30px;
   text-align: center;
   color: #333333;
 }
 
-.modal form input, .modal form button {
+.modal-bg form input, .modal-bg form button {
   width: 60%;
   padding: 15px;
   margin: 2px;
@@ -563,32 +562,32 @@
   border: solid #dfd7d7 1px;
 }
 
-.modal form button {
+.modal-bg form button {
   font-size: 20px;
   color: #ffffff;
   -webkit-box-shadow: 1px 1px 5px #333333;
           box-shadow: 1px 1px 5px #333333;
 }
 
-.modal form .enableSubmit {
+.modal-bg form .enableSubmit {
   background-color: #f25;
 }
 
-.modal form .disableSubmit {
+.modal-bg form .disableSubmit {
   background-color: #eba0b1;
 }
 
-.modal form .warning {
+.modal-bg form .warning {
   color: red;
 }
 
-.modal form .error-msg {
+.modal-bg form .error-msg {
   width: 80%;
   color: red;
   text-align: center;
 }
 
-.modal .switch-title {
+.modal-bg .switch-title {
   font-size: 18px;
   padding: 15x;
 }
@@ -650,7 +649,7 @@
   }
 }
 
-.modal .book-info-modal {
+.modal-bg .book-info-modal {
   position: relative;
   width: 80vw;
   height: 80vh;
@@ -667,7 +666,7 @@
   overflow: hidden;
 }
 
-.modal .book-info-modal .book-title {
+.modal-bg .book-info-modal .book-title {
   height: 90%;
   -webkit-box-flex: 1.3;
       -ms-flex: 1.3;
@@ -675,11 +674,11 @@
   padding: 8px;
 }
 
-.modal .book-info-modal .book-title * {
+.modal-bg .book-info-modal .book-title * {
   text-align: center;
 }
 
-.modal .book-info-modal .book-title .info-img {
+.modal-bg .book-info-modal .book-title .info-img {
   width: 100%;
   min-width: 190px;
   height: 70%;
@@ -690,34 +689,34 @@
 }
 
 @media (max-width: 500px) {
-  .modal .book-info-modal .book-title .info-img {
+  .modal-bg .book-info-modal .book-title .info-img {
     height: 55%;
     min-width: 130px;
     margin: 4px 0;
   }
 }
 
-.modal .book-info-modal .book-title .book-name {
+.modal-bg .book-info-modal .book-title .book-name {
   font-size: 30px;
 }
 
 @media (max-width: 500px) {
-  .modal .book-info-modal .book-title .book-name {
+  .modal-bg .book-info-modal .book-title .book-name {
     font-size: 23px;
   }
 }
 
-.modal .book-info-modal .book-title .author-name {
+.modal-bg .book-info-modal .book-title .author-name {
   font-size: 20px;
 }
 
 @media (max-width: 500px) {
-  .modal .book-info-modal .book-title .author-name {
+  .modal-bg .book-info-modal .book-title .author-name {
     font-size: 16px;
   }
 }
 
-.modal .book-info-modal .book-info-text {
+.modal-bg .book-info-modal .book-info-text {
   -webkit-box-flex: 2;
       -ms-flex: 2;
           flex: 2;
@@ -729,37 +728,37 @@
 }
 
 @media (max-width: 800px) {
-  .modal .book-info-modal .book-info-text {
+  .modal-bg .book-info-modal .book-info-text {
     border: none;
   }
 }
 
 @media (max-width: 500px) {
-  .modal .book-info-modal .book-info-text {
+  .modal-bg .book-info-modal .book-info-text {
     -webkit-transform: translate(0, -46px);
             transform: translate(0, -46px);
     padding: 4px;
   }
 }
 
-.modal .book-info-modal .book-info-text .summery {
+.modal-bg .book-info-modal .book-info-text .summery {
   width: 90%;
 }
 
-.modal .book-info-modal .book-info-text .summery p, .modal .book-info-modal .book-info-text .summery h3 {
+.modal-bg .book-info-modal .book-info-text .summery p, .modal-bg .book-info-modal .book-info-text .summery h3 {
   color: #f25;
 }
 
 @media (max-width: 500px) {
-  .modal .book-info-modal .book-info-text .summery h3 {
+  .modal-bg .book-info-modal .book-info-text .summery h3 {
     font-size: 14px;
   }
-  .modal .book-info-modal .book-info-text .summery p {
+  .modal-bg .book-info-modal .book-info-text .summery p {
     font-size: 11px;
   }
 }
 
-.modal .book-info-modal .add-to-cart {
+.modal-bg .book-info-modal .add-to-cart {
   width: 100%;
   height: 15%;
   position: absolute;
@@ -779,12 +778,12 @@
   border-radius: 0;
 }
 
-.modal .book-info-modal .add-to-cart .info-price {
+.modal-bg .book-info-modal .add-to-cart .info-price {
   margin: 0 10px;
   color: #ffffff;
 }
 
-.modal .book-info-modal .add-to-cart .cart-icon .fa-cart-plus {
+.modal-bg .book-info-modal .add-to-cart .cart-icon .fa-cart-plus {
   font-size: 30px;
   color: #ffffff;
 }
@@ -1016,7 +1015,7 @@
   color: #f25;
 }
 
-.modal .cart-modal {
+.modal-bg .cart-modal {
   position: relative;
   width: 80vw;
   height: 80vh;
@@ -1036,12 +1035,12 @@
   padding: 10px;
 }
 
-.modal .cart-modal .title {
+.modal-bg .cart-modal .title {
   margin: 0 auto;
   font-size: 20px;
 }
 
-.modal .cart-modal .purchased-books-container {
+.modal-bg .cart-modal .purchased-books-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1051,18 +1050,18 @@
   margin: 10px 5px;
 }
 
-.modal .cart-modal .purchased-books-container .book {
+.modal-bg .cart-modal .purchased-books-container .book {
   position: relative;
   margin: 16px;
 }
 
 @media (max-width: 800px) {
-  .modal .cart-modal .purchased-books-container .book {
+  .modal-bg .cart-modal .purchased-books-container .book {
     margin: 8px;
   }
 }
 
-.modal .cart-modal .purchased-books-container .book .fa-times {
+.modal-bg .cart-modal .purchased-books-container .book .fa-times {
   font-size: 16px;
   left: 40px;
   top: -24px;
@@ -1070,31 +1069,31 @@
 }
 
 @media (max-width: 800px) {
-  .modal .cart-modal .purchased-books-container .book .fa-times {
+  .modal-bg .cart-modal .purchased-books-container .book .fa-times {
     left: 25px;
     top: -16px;
   }
 }
 
 @media (max-width: 500px) {
-  .modal .cart-modal .purchased-books-container .book .fa-times {
+  .modal-bg .cart-modal .purchased-books-container .book .fa-times {
     left: 15px;
     top: -10px;
   }
 }
 
-.modal .cart-modal .pay-btn {
+.modal-bg .cart-modal .pay-btn {
   margin: 0 auto;
   padding: 6px 12px;
   background-color: #f25;
   color: #ffffff;
 }
 
-.modal .cart-modal .pay-bill {
+.modal-bg .cart-modal .pay-bill {
   text-align: center;
 }
 
-.modal .cart-modal .book {
+.modal-bg .cart-modal .book {
   width: 102px;
   height: 160px;
   background-position: center;
@@ -1104,17 +1103,29 @@
 }
 
 @media (max-width: 800px) {
-  .modal .cart-modal .book {
+  .modal-bg .cart-modal .book {
     width: 75px;
     height: 130px;
   }
 }
 
 @media (max-width: 500px) {
-  .modal .cart-modal .book {
+  .modal-bg .cart-modal .book {
     width: 55px;
     height: 110px;
     margin: 3px;
+  }
+}
+
+.header {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media (max-width: 800px) {
+  .header {
+    height: 90px;
   }
 }
 
@@ -1124,11 +1135,50 @@
   display: flex;
 }
 
+.choose-options .options .button {
+  opacity: 80%;
+  outline: none;
+}
+
+.choose-options .options :hover {
+  opacity: 1;
+}
+
+@media (max-width: 800px) {
+  .choose-options .options * {
+    font-size: 17px;
+  }
+}
+
+@media (max-width: 500px) {
+  .choose-options .options {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .choose-options .options * {
+    font-size: 14px;
+    width: 100%;
+  }
+}
+
+.chosenOption {
+  background-color: white;
+  color: #f25;
+  font-weight: 600;
+}
+
 .search-book {
   padding: 5px;
   width: 100%;
   height: 50px;
   margin: auto;
+  border: #f25;
+}
+
+.search-book:focus {
+  outline: #f25;
 }
 
 .book-panel {
@@ -1139,7 +1189,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 50%;
+  width: 40%;
   margin: auto;
 }
 
@@ -1175,6 +1225,7 @@
   padding: 2px;
   margin: 2px;
   height: 50px;
+  outline: #f25;
 }
 
 .book-panel div #check-img {
@@ -1206,10 +1257,6 @@
 .book-panel * {
   margin: 2px;
   padding: 5px;
-}
-
-.half-modal {
-  top: 50vh;
 }
 
 .msg-modal {
@@ -1245,6 +1292,331 @@
   text-align: center;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
+}
+
+.modal {
+  display: block;
+}
+
+.modal form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 40%;
+  height: 70%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: white;
+  border-radius: 4px;
+  padding: 5px;
+  -webkit-transition: opacity 0.4s ease-in-out, -webkit-transform 0.2s;
+  transition: opacity 0.4s ease-in-out, -webkit-transform 0.2s;
+  transition: transform 0.2s, opacity 0.4s ease-in-out;
+  transition: transform 0.2s, opacity 0.4s ease-in-out, -webkit-transform 0.2s;
+  position: relative;
+}
+
+@media (max-width: 800px) {
+  .modal form {
+    width: 85vw;
+    height: 80vh;
+    position: fixed;
+    -webkit-transform: translateX(8px);
+            transform: translateX(8px);
+  }
+}
+
+.modal form .fa-times {
+  font-size: 35px;
+  color: #a39d9d;
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  opacity: 80%;
+}
+
+.modal form :hover {
+  opacity: 1;
+}
+
+.modal form .modal-title {
+  padding: 8px;
+  font-size: 30px;
+  text-align: center;
+  color: #333333;
+}
+
+.modal form input, .modal form button {
+  width: 60%;
+  padding: 15px;
+  margin: 2px;
+  border-radius: 4px;
+  border: solid #dfd7d7 1px;
+  outline: #f25;
+}
+
+.modal form button {
+  font-size: 20px;
+  color: #ffffff;
+  -webkit-box-shadow: 1px 1px 5px #333333;
+          box-shadow: 1px 1px 5px #333333;
+}
+
+.modal form .enableSubmit {
+  background-color: #f25;
+}
+
+.modal form .disableSubmit {
+  background-color: #eba0b1;
+}
+
+.modal form .warning {
+  color: red;
+}
+
+.modal form .error-msg {
+  width: 80%;
+  color: red;
+  text-align: center;
+}
+
+.modal .switch-title {
+  font-size: 18px;
+  padding: 15x;
+}
+
+#modal-bg {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(29, 26, 26, 0.829);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  -webkit-transition: opacity 0.1s ease-in-out;
+  transition: opacity 0.1s ease-in-out;
+}
+
+#modal-bg #login-form {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 40%;
+  height: 70%;
+  background-color: #ffffff;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 40%;
+  height: 70%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: white;
+  border-radius: 4px;
+  padding: 5px;
+  -webkit-transition: opacity 0.4s ease-in-out, -webkit-transform 0.2s;
+  transition: opacity 0.4s ease-in-out, -webkit-transform 0.2s;
+  transition: transform 0.2s, opacity 0.4s ease-in-out;
+  transition: transform 0.2s, opacity 0.4s ease-in-out, -webkit-transform 0.2s;
+}
+
+#modal-bg #login-form :hover {
+  opacity: 1;
+}
+
+#modal-bg #login-form .modal-title {
+  padding: 8px;
+  font-size: 30px;
+  text-align: center;
+  color: #333333;
+}
+
+#modal-bg #login-form input, #modal-bg #login-form button {
+  width: 60%;
+  padding: 15px;
+  margin: 2px;
+  border-radius: 4px;
+  border: solid #dfd7d7 1px;
+  outline: #f25;
+}
+
+#modal-bg #login-form button {
+  font-size: 20px;
+  color: #ffffff;
+  -webkit-box-shadow: 1px 1px 5px #333333;
+          box-shadow: 1px 1px 5px #333333;
+}
+
+#modal-bg #login-form .enableSubmit {
+  background-color: #f25;
+}
+
+#modal-bg #login-form .disableSubmit {
+  background-color: #eba0b1;
+}
+
+#modal-bg #login-form .warning {
+  color: red;
+}
+
+#modal-bg #login-form .error-msg {
+  width: 80%;
+  color: red;
+  text-align: center;
+}
+
+@media (max-width: 800px) {
+  #modal-bg #login-form {
+    width: 70%;
+  }
+}
+
+@media (max-width: 500px) {
+  #modal-bg #login-form {
+    width: 90%;
+  }
+}
+
+.books-search-modal-bg {
+  width: 100%;
+  min-height: 50vh;
+  background-color: rgba(29, 26, 26, 0.829);
+  -webkit-filter: blur();
+          filter: blur();
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  top: 47vh;
+  z-index: 3;
+  -webkit-transition: opacity 0.1s ease-in-out;
+  transition: opacity 0.1s ease-in-out;
+  border-radius: 0;
+  padding: 15px;
+}
+
+@media (max-width: 500px) {
+  .books-search-modal-bg {
+    top: 16vh;
+  }
+}
+
+.books-search-modal-bg .books-search-modal {
+  min-width: 300px;
+  min-height: 30px;
+  margin: 8px auto;
+  background-color: #ffffff;
+  position: relative;
+}
+
+.books-search-modal-bg .books-search-modal .fas.fa-times {
+  font-size: 25px;
+}
+
+@media (max-width: 500px) {
+  .books-search-modal-bg .books-search-modal {
+    width: 100%;
+    min-height: 70vh;
+    min-width: auto;
+  }
+  .books-search-modal-bg .books-search-modal .fas.fa-times {
+    display: block;
+  }
+}
+
+.books-search-modal-bg .books-search-modal .section-title {
+  border: none;
+  margin: 8px 4px;
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 800px) {
+  .books-search-modal-bg .books-search-modal .section-title {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 500px) {
+  .books-search-modal-bg .books-search-modal .section-title {
+    font-size: 13px;
+  }
+}
+
+.books-search-modal-bg .books-search-modal .searched-books {
+  width: auto;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: auto;
+}
+
+.books-search-modal-bg .books-search-modal .searched-books .book {
+  width: 102px;
+  height: 160px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: 8px;
+}
+
+@media (max-width: 800px) {
+  .books-search-modal-bg .books-search-modal .searched-books .book {
+    width: 75px;
+    height: 130px;
+  }
+}
+
+@media (max-width: 500px) {
+  .books-search-modal-bg .books-search-modal .searched-books .book {
+    width: 55px;
+    height: 110px;
+    margin: 3px;
+  }
+}
+
+.books-search-modal-bg .books-search-modal .searched-books .book .fas.fa-times {
+  font-size: 10px;
+  color: #f25;
 }
 
 .display-none {
