--- a/public/css/partials/_gallery.scss
+++ b/public/css/partials/_gallery.scss
@@ -3,11 +3,10 @@
     width: 80%;
     margin:35px auto;
     @media(max-width:800px){
-      height: 250px;
+      // height: 250px;
       width: 95%;
     }
     @media(max-width:500px){
-      height: 160px;
     }
     .section-title{
       width: 80vw;
@@ -28,12 +27,12 @@
         &:hover{
           opacity: 60%;
         }
-       min-width: 200px;
+       width: 200px;
        height: 95%;
        // counter-increment: gallery-cell;
        background-repeat: no-repeat;
        background-position-x: center;
-       background-size: contain;
+       background-size: cover;
        display: flex;
        justify-content: center;
        align-items: flex-end;
