--- a/public/css/style.css
+++ b/public/css/style.css
@@ -402,14 +402,7 @@
 
 @media (max-width: 800px) {
   .gallery-container {
-    height: 250px;
     width: 95%;
-  }
-}
-
-@media (max-width: 500px) {
-  .gallery-container {
-    height: 160px;
   }
 }
 
@@ -437,11 +430,11 @@
 }
 
 .gallery-container .gallery.mid .gallery-cell {
-  min-width: 200px;
+  width: 200px;
   height: 95%;
   background-repeat: no-repeat;
   background-position-x: center;
-  background-size: contain;
+  background-size: cover;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -666,6 +659,12 @@
   overflow: hidden;
 }
 
+@media (max-width: 800px) {
+  .modal-bg .book-info-modal {
+    height: 90vh;
+  }
+}
+
 .modal-bg .book-info-modal .book-title {
   height: 90%;
   -webkit-box-flex: 1.3;
@@ -685,10 +684,10 @@
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
-  margin: 8px 0;
+  margin: 2px 0;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .modal-bg .book-info-modal .book-title .info-img {
     height: 55%;
     min-width: 130px;
@@ -730,6 +729,8 @@
 @media (max-width: 800px) {
   .modal-bg .book-info-modal .book-info-text {
     border: none;
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
   }
 }
 
@@ -738,18 +739,19 @@
     -webkit-transform: translate(0, -46px);
             transform: translate(0, -46px);
     padding: 4px;
+    margin: 2px;
   }
 }
 
 .modal-bg .book-info-modal .book-info-text .summery {
-  width: 90%;
+  width: 100%;
 }
 
 .modal-bg .book-info-modal .book-info-text .summery p, .modal-bg .book-info-modal .book-info-text .summery h3 {
   color: #f25;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .modal-bg .book-info-modal .book-info-text .summery h3 {
     font-size: 14px;
   }
