--- a/public/css/partials/_gallery.scss
+++ b/public/css/partials/_gallery.scss
@@ -28,7 +28,7 @@
           opacity: 60%;
         }
        width: 200px;
-       height: 100%;
+       height: 95%;
        // counter-increment: gallery-cell;
        background-repeat: no-repeat;
        background-position-x: center;
@@ -43,6 +43,7 @@
        }
        @media(max-width:500px){
         min-width: 100px;
+        height: 100px;
        }
        p{
          font-size: 20px;
