--- a/public/css/style.css
+++ b/public/css/style.css
@@ -431,7 +431,7 @@
 
 .gallery-container .gallery.mid .gallery-cell {
   width: 200px;
-  height: 100%;
+  height: 95%;
   background-repeat: no-repeat;
   background-position-x: center;
   background-size: cover;
@@ -460,6 +460,7 @@
 @media (max-width: 500px) {
   .gallery-container .gallery.mid .gallery-cell {
     min-width: 100px;
+    height: 100px;
   }
 }
 
